tests/snapshot/error/stack_trace/non_error/try_finally_rethrow.js
function foo() {
    try {
        throw 42;
    } finally {
    }
}
foo();
